--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <html lang="pt-br">
         <head>
             <meta charset="UTF-8">
+            <link rel="stylesheet" href="style.css">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>fLASH CARD</title>
@@ -10,8 +11,27 @@
             <main>
                     <section id="container">
                         <article class="cartao">
-
-                        </article>
+                            <div class="cartao_conteudo">
+                                <h3>Programação </h3>
+                                <div  class="cartao_conteudo_pergunta">
+                                    Qual foi o nome do muro que dividiu Berlim durante a Guerra Fria?
+                                <div class=" cartao_conteudo_resposta">
+                                    Muro de Berlim.
+                                </div>    
+                                </div>
+                            </div>
+                       </article>
+                       <article class="cartao">
+                        <div class="cartao_conteudo">
+                            <h3>Programação </h3>
+                            <div  class="cartao_conteudo_pergunta">
+                                O que é Java Script?
+                            <div class=" cartao_conteudo_resposta">
+                                O Java Script é uma linguagem de programação
+                            </div>    
+                            </div>
+                        </div>
+                   </article>
                     </section>
             </main>
             <footer>
